--- a/package.json
+++ b/package.json
@@ -2,21 +2,17 @@
   "name": "ui-builder",
   "version": "2.0.0",
   "description": "Frontend library to generate user interface.",
-  "main": "src/index.js",
-  "scripts": {
-    "build": "uglifyjs src/uibuilder.js -o dist/uibuilder.min.js"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Romario5/UIBuilder.git"
   },
   "keywords": [
     "ui",
-	"framework",
+    "framework",
     "interface",
     "generator",
-	"javascript",
-	"js"
+    "javascript",
+    "js"
   ],
   "author": "Roman Muravchuk",
   "license": "MIT",
@@ -25,10 +21,15 @@
   },
   "homepage": "https://github.com/Romario5/UIBuilder#readme",
   "devDependencies": {
+	"gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-uglify": "^3.0.0",
     "browserify": "^14.1.0",
     "uglify-js": "^2.7.5"
   },
-  "dependencies": {
-
+  "dependencies": {},
+  "directories": {
+    "example": "example",
+    "test": "tests"
   }
 }
